# new_cs48000_assignments

./: .dockerignore  .env.test  .pre-commit-config.yaml  Dockerfile  README.md  SCAFFOLDING_GUIDE.md  SCAFFOLDING_SUMMARY.md  config.py  main.py  pyproject.toml  pytest.ini  render.yaml  requirements.txt  start.sh
.github/workflows/: ci.yml  deploy.yml
data/: Ops_Production_Log.xlsx  Ops_Shipping_Log.xlsx
db/: sample_queries.sql  schema.sql  seed.sql
docs/: architecture_decision_records.md  assumptions_scope.md  data_design.md  tech_stack_decision_records.md
nginx/: steelworks.conf
src/data_access/: __init__.py  base.py  data_integrity_access.py  data_source_metadata_access.py  file_ingestion_adapter.py  production_data_access.py  quality_data_access.py  shipping_data_access.py
src/models/: __init__.py  data_integrity_flag.py  data_source.py  lot.py  production_record.py  quality_record.py  shipping_record.py
src/presentation/: __init__.py  dashboard.py  widgets.py
src/services/: __init__.py  conflict_resolution_service.py  data_integration_service.py  data_normalization_service.py  integrated_view_service.py  validation_service.py
tests/: conftest.py
tests/e2e/: test_dashboard_playwright.py
tests/integration/: test_database_integration.py
tests/unit/data_access/: test_data_integrity_access.py  test_data_source_metadata_access.py  test_file_ingestion_adapter.py  test_production_data_access.py  test_quality_data_access.py  test_shipping_data_access.py
tests/unit/services/: test_conflict_resolution_service.py  test_data_integration_service.py  test_data_normalization_service.py  test_integrated_view_service.py  test_validation_service.py
